--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -1,1 +1,18 @@
 @import "tailwindcss";
+
+:root{
+    --sliding-link-nuetral:#888;
+    
+    --background-light:#fff;
+    --background-dark:#223;
+
+    --border-light-mode:#000;
+
+    --text-light:#000;
+    --text-dark:#fff;
+
+    --btn-active-light:lightgreen;
+    --btn-disable-light:pink;
+    --btn-danger-light:red;
+
+}
