Added most of the landing page design
Navbar changes:
Made the navbar absolute top-0 (may change)
Used grow to fix the center icons to the center

Main page changes:
Added font: akira expanded
Added the 2 sections from the design mockup and the footer as well

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -1,5 +1,15 @@
 @import "tailwindcss";
 
+@theme {
+    --font-akira: "Akira", "sans-serif";
+}
+
+@font-face {
+    font-family: Akira;
+    display: swap;
+    src: url("../lib/fonts/akira_expanded.otf");
+}
+
 :root{
     --hotbar-bkg-color:#ff013c;
 
