--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -4,11 +4,12 @@
     --hotbar-bkg-color:#ff013c;
 
     --sliding-link-nuetral:#888;
-    
+
     --background-light:#fff;
     --background-dark:#223;
 
     --border-light-mode:#000;
+    --border-dark-mode:#fff;
 
     --text-light:#000;
     --text-dark:#fff;
