fixed oc page and added animation to events

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -25,7 +25,8 @@
     --text-dark:#fff;
 
     --btn-active-light:lightgreen;
+    --btn-active-dark:green;
     --btn-disable-light:pink;
-    --btn-danger-light:red;
+    --btn-danger-dark:red;
 
 }
